Fix firefox wrap/no-wrap and styling

--- a/styles/main.less
+++ b/styles/main.less
@@ -142,11 +142,12 @@ section.form-part {
     padding: 16px 8px 0;
   }
   h3 {
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 14px;
+    line-height: 18px;
     color: lighten(@black, 10%);
     padding: 0 8px 8px;
     position: relative;
+    font-weight: normal;
   }
 }
 
@@ -215,6 +216,9 @@ div.tagsinput span.tag {
   font-size: 12px;
   overflow:scroll;
   word-wrap:  break-word;
+  pre {
+    white-space: pre-wrap;
+  }
 }
 
 section.form-submit {
